--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "axios": "^1.7.2",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
-    "parse": "^5.3.0"
+    "parse": "^5.3.0",
+    "sequelize": "^6.37.3",
+    "mysql2": "^3.10.3"
   }
 }
