--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -11,3 +11,4 @@ services:
       MYSQL_PASSWORD: ${DB_PASSWORD} # Senha do usuário do banco de dados
     ports:
       - "3306:3306" # Porta do MySQL dentro do container e do host
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
