--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^16.4.5",
     "mysql2": "^3.10.3",
     "parse": "^5.3.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "sqlite3": "^5.1.7"
   }
 }
